--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1"> 
 	<title>Page Title</title>
+
+	<link rel="stylesheet" type="text/css" href="css/campingsuedtirol.css">
+	<link rel="stylesheet" type="text/css" href="css/jquery.mobile.structure-1.3.2.min.css">
+
+	<script type="text/javascript" src="js/jquery.mobile-1.3.2.min.js"></script>
+	<script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
+
+	<script type="text/javascript" src="js/main.js"></script>
+
 </head> 
 
 
