--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html> 
-<html> 
+<html manifest="cache.manifest">
 
 <head>
 	<meta charset="utf-8">
@@ -10,10 +10,10 @@
 	<link rel="stylesheet" type="text/css" href="css/campingsuedtirol.css">
 	<link rel="stylesheet" type="text/css" href="css/jquery.mobile.structure-1.3.2.min.css">
 
-	<script type="text/javascript" src="js/jquery.mobile-1.3.2.min.js"></script>
-	<script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
-
-	<!--script type="text/javascript" src="js/main.js"></script-->
+	<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+	<script src="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.js"></script>
+	<!--script src="js/jquery.mobile-1.3.2.min.js"></script>
+	<script src="js/jquery-1.9.1.min.js"></script-->
 
 </head> 
 
