--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 	<link rel="stylesheet" type="text/css" href="css/campingsuedtirol.css">
 	<link rel="stylesheet" type="text/css" href="css/jquery.mobile.structure-1.3.2.min.css">
 
-	<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-	<script src="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.js"></script>
-	<!--script src="js/jquery.mobile-1.3.2.min.js"></script>
-	<script src="js/jquery-1.9.1.min.js"></script-->
+	<!--script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+	<script src="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.js"></script-->
+	<script src="js/jquery.js"></script>
+	<script src="js/jquery.mobile-1.3.2.min.js"></script>
+	
 
 </head> 
 
