--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 			<div data-role="navbar">
 				<ul>
 					<li><a data-tab="info" class="ui-btn-active">Information</a></li>
-					<li><a data-tab="images">Bilder</a></li>
+					<li><a data-tab="images">Impressionen</a></li>
 					<li><a data-tab="map">Anfahrt</a></li>
 				</ul>
 			</div>
@@ -75,6 +75,11 @@
 						<div data-role="collapsible" data-mini="true" id="col-note">
 							<h3>Anmerkung</h3>
 							<p></p>
+						</div>
+						<div data-role="collapsible" data-mini="true" id="col-price">
+							<h3>Preise</h3>
+							<p>
+							</p>
 						</div>
 					</div>
 				</div>
@@ -109,7 +114,7 @@
 		</div>
 		<div data-role="content">
 			<div data-role="collapsible-set" data-inset="false">
-				<div data-role="collapsible" data-collapsed-icon="info" data-expanded-icon="info">
+				<div data-role="collapsible" data-expanded-icon="info">
 					<h2>Impressum</h2>
 					<p>
 						<h3>VCS Vereinigung der Campingplatzbetreiber Südtirols</h3>
@@ -119,48 +124,7 @@
 						Moritzinger Weg 83/Via S. Maurizio 83
 					</p>
 				</div>
-				<div data-role="collapsible" data-collapsed-icon="info" data-expanded-icon="info">
-					<h2>Prospekte</h2>
-					<p>
-						Bitte füllen Sie folgendes Formular aus und wir schicken Ihnen umgehend Prospektmaterial über unsere Campingplätze zu.<br />
-						<div data-role="fieldcontain">
-							<label for="name">Anrede:</label>
-							<select>
-								<option>Herr</option>
-								<option>Frau</option>
-							</select>
-						</div>
-						<div data-role="fieldcontain">
-							<label for="name">Vorname:</label>
-							<input type="text" name="name" id="name" value="" />
-						</div>	
-						<div data-role="fieldcontain">
-							<label for="name">Nachname:</label>
-							<input type="text" name="name" id="name" value="" />
-						</div>	
-						<div data-role="fieldcontain">
-							<label for="name">Stra&szlig;e:</label>
-							<input type="text" name="name" id="name" value="" />
-						</div>	
-						<div data-role="fieldcontain">
-							<label for="name">PLZ:</label>
-							<input type="text" name="name" id="name" value="" />
-						</div>	
-						<div data-role="fieldcontain">
-							<label for="name">Ort:</label>
-							<input type="text" name="name" id="name" value="" />
-						</div>
-						<div data-role="fieldcontain">
-							<label for="name">Land:</label>
-							<select name="tx_wccamping_pi4[country]"><option value="">Bitte auswählen...</option><option value="3">Afghanistan</option><option value="240">Åland</option><option value="6">Albania</option><option value="59">Algeria</option><option value="12">American Samoa</option><option value="1">Andorra</option><option value="9">Angola</option><option value="5">Anguilla</option><option value="10">Antarctica</option><option value="4">Antigua and Barbuda</option><option value="11">Argentina</option><option value="7">Armenia</option><option value="15">Aruba</option><option value="14">Australia</option><option value="13">Austria</option><option value="16">Azerbaijan</option><option value="23">Bahrain</option><option value="19">Bangladesh</option><option value="18">Barbados</option><option value="34">Belarus</option><option value="20">Belgium</option><option value="35">Belize</option><option value="25">Benin</option><option value="26">Bermuda</option><option value="31">Bhutan</option><option value="28">Bolivia</option><option value="249">Bonaire, Sint Eustatius and Sa</option><option value="17">Bosnia and Herzegovina</option><option value="33">Botswana</option><option value="32">Bouvet Island</option><option value="29">Brazil</option><option value="100">British Indian Ocean Territory</option><option value="226">British Virgin Islands</option><option value="27">Brunei</option><option value="22">Bulgaria</option><option value="21">Burkina Faso</option><option value="24">Burundi</option><option value="110">Cambodia</option><option value="45">Cameroon</option><option value="36">Canada</option><option value="50">Cape Verde</option><option value="117">Cayman Islands</option><option value="39">Central African Republic</option><option value="202">Chad</option><option value="44">Chile</option><option value="46">China</option><option value="51">Christmas Island</option><option value="37">Cocos (Keeling) Islands</option><option value="47">Colombia</option><option value="112">Comoros</option><option value="38">Congo</option><option value="40">Congo-Brazzaville</option><option value="43">Cook Islands</option><option value="48">Costa Rica</option><option value="42">Côte d’Ivoire</option><option value="93">Croatia</option><option value="49">Cuba</option><option value="250">Curaçao</option><option value="52">Cyprus</option><option value="53">Czech Republic</option><option value="56">Denmark</option><option value="55">Djibouti</option><option value="57">Dominica</option><option value="58">Dominican Republic</option><option value="60">Ecuador</option><option value="62">Egypt</option><option value="198">El Salvador</option><option value="84">Equatorial Guinea</option><option value="64">Eritrea</option><option value="61">Estonia</option><option value="66">Ethiopia</option><option value="69">Falkland Islands</option><option value="71">Faroes</option><option value="68">Fiji</option><option value="67">Finland</option><option value="72">France</option><option value="77">French Guiana</option><option value="166">French Polynesia</option><option value="203">French Southern Territories</option><option value="73">Gabon</option><option value="81">Gambia</option><option value="76">Georgia</option><option value="54">Germany</option><option value="78">Ghana</option><option value="79">Gibraltar</option><option value="85">Greece</option><option value="80">Greenland</option><option value="75">Grenada</option><option value="83">Guadeloupe</option><option value="88">Guam</option><option value="87">Guatemala</option><option value="245">Guernsey</option><option value="82">Guinea</option><option value="89">Guinea-Bissau</option><option value="90">Guyana</option><option value="94">Haiti</option><option value="241">Heard Island and McDonald Isla</option><option value="92">Honduras</option><option value="91">Hong Kong SAR of China</option><option value="95">Hungary</option><option value="103">Iceland</option><option value="99">India</option><option value="96">Indonesia</option><option value="102">Iran</option><option value="101">Iraq</option><option value="97">Ireland</option><option value="246">Isle of Man</option><option value="98">Israel</option><option value="104">Italy</option><option value="105">Jamaica</option><option value="107">Japan</option><option value="244">Jersey</option><option value="106">Jordan</option><option value="118">Kazakhstan</option><option value="108">Kenya</option><option value="111">Kiribati</option><option value="116">Kuwait</option><option value="109">Kyrgyzstan</option><option value="119">Laos</option><option value="128">Latvia</option><option value="120">Lebanon</option><option value="125">Lesotho</option><option value="124">Liberia</option><option value="129">Libya</option><option value="122">Liechtenstein</option><option value="126">Lithuania</option><option value="127">Luxembourg</option><option value="139">Macao SAR of China</option><option value="135">Macedonia</option><option value="133">Madagascar</option><option value="147">Malawi</option><option value="149">Malaysia</option><option value="146">Maldives</option><option value="136">Mali</option><option value="144">Malta</option><option value="134">Marshall Islands</option><option value="141">Martinique</option><option value="142">Mauritania</option><option value="145">Mauritius</option><option value="233">Mayotte</option><option value="148">Mexico</option><option value="70">Micronesia</option><option value="132">Moldova</option><option value="131">Monaco</option><option value="138">Mongolia</option><option value="242">Montenegro</option><option value="143">Montserrat</option><option value="130">Morocco</option><option value="150">Mozambique</option><option value="137">Myanmar</option><option value="151">Namibia</option><option value="160">Nauru</option><option value="159">Nepal</option><option value="157">Netherlands</option><option value="8">Netherlands Antilles</option><option value="152">New Caledonia</option><option value="162">New Zealand</option><option value="156">Nicaragua</option><option value="153">Niger</option><option value="155">Nigeria</option><option value="161">Niue</option><option value="154">Norfolk Island</option><option value="114">North Korea</option><option value="140">Northern Marianas</option><option value="158">Norway</option><option value="163">Oman</option><option value="169">Pakistan</option><option value="175">Palau</option><option value="238">Palestine</option><option value="164">Panama</option><option value="167">Papua New Guinea</option><option value="176">Paraguay</option><option value="165">Peru</option><option value="168">Philippines</option><option value="172">Pitcairn Islands</option><option value="170">Poland</option><option value="174">Portugal</option><option value="173">Puerto Rico</option><option value="177">Qatar</option><option value="178">Reunion</option><option value="179">Romania</option><option value="180">Russia</option><option value="181">Rwanda</option><option value="248">Saint Barthélemy</option><option value="188">Saint Helena, Ascension and Tr</option><option value="113">Saint Kitts and Nevis</option><option value="121">Saint Lucia</option><option value="247">Saint Martin</option><option value="171">Saint Pierre and Miquelon</option><option value="224">Saint Vincent and the Grenadin</option><option value="231">Samoa</option><option value="193">San Marino</option><option value="197">São Tomé e Príncipe</option><option value="182">Saudi Arabia</option><option value="194">Senegal</option><option value="243">Serbia</option><option value="239">Serbia and Montenegro</option><option value="184">Seychelles</option><option value="192">Sierra Leone</option><option value="187">Singapore</option><option value="251">Sint Maarten</option><option value="191">Slovakia</option><option value="189">Slovenia</option><option value="183">Solomon Islands</option><option value="195">Somalia</option><option value="235">South Africa</option><option value="86">South Georgia and the South Sa</option><option value="115">South Korea</option><option value="252">South Sudan</option><option value="65">Spain</option><option value="123">Sri Lanka</option><option value="185">Sudan</option><option value="196">Suriname</option><option value="190">Svalbard</option><option value="200">Swaziland</option><option value="186">Sweden</option><option value="41">Switzerland</option><option value="199">Syria</option><option value="215">Taiwan</option><option value="206">Tajikistan</option><option value="216">Tanzania</option><option value="205">Thailand</option><option value="30">The Bahamas</option><option value="211">Timor-Leste</option><option value="204">Togo</option><option value="207">Tokelau</option><option value="210">Tonga</option><option value="213">Trinidad and Tobago</option><option value="209">Tunisia</option><option value="212">Turkey</option><option value="208">Turkmenistan</option><option value="201">Turks and Caicos Islands</option><option value="214">Tuvalu</option><option value="218">Uganda</option><option value="217">Ukraine</option><option value="2">United Arab Emirates</option><option value="74">United Kingdom</option><option value="220">United States</option><option value="219">United States Minor Outlying I</option><option value="221">Uruguay</option><option value="227">US Virgin Islands</option><option value="222">Uzbekistan</option><option value="229">Vanuatu</option><option value="223">Vatican City</option><option value="225">Venezuela</option><option value="228">Vietnam</option><option value="230">Wallis and Futuna</option><option value="63">Western Sahara</option><option value="232">Yemen</option><option value="236">Zambia</option><option value="237">Zimbabwe</option></select>
-						</div>
-						<div data-role="fieldcontain">
-							<label for="name">e-Mail:</label>
-							<input type="text" name="name" id="name" value="" />
-						</div>
-					</p>
-				</div>
-				<div data-role="collapsible" data-collapsed-icon="info" data-expanded-icon="info">
+				<div data-role="collapsible" data-expanded-icon="info">
 					<h2>Partner</h2>
 					<p>
 						<ul data-role="listview">
