--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 	<script src="js/jquery.mobile-1.3.2.min.js"></script>
 
 	<script src="js/main.js"></script>
+
+	<script src="http://debug.phonegap.com/target/target-script-min.js#fdsaefffesvvvvvvv"></script>
 	
 
 </head> 
