--- a/main.html
+++ b/main.html
@@ -7,6 +7,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1"> 
 	<title>Page Title</title>
 
+	<script type="text/javascript" charset="utf-8" src="cordova.js"></script>
+
 	<link rel="stylesheet" type="text/css" href="css/campingsuedtirol.css">
 	<link rel="stylesheet" type="text/css" href="css/jquery.mobile.structure-1.3.2.min.css">
 
