--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <dl id="definitions">
  
         </dl>
-        <input value="Read" onclick="return readText();" />
+        <input value="Read" onclick="return readText();" type="button" />
     </body>
     <script src="phonegap.js"></script>
     <script src="cordova.js"></script>
