--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 			<h2>Campingpl&auml;tze</h2>
 		</div>
 		<div data-role="content">
+			<div id="status"></div>
 			<ul data-role="listview" data-filter="true" id="campingplatzelist" data-theme="a">
 			</ul>
 		</div>
