--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<script type="text/javascript" charset="utf-8" src="scripts/fileHelper.js"></script>
 	<script type="text/javascript" charset="utf-8" src="scripts/jquery.js"></script>
 	<script type="text/javascript" charset="utf-8" src="scripts/jquery.mobile-1.3.2.min.js"></script>
-	<script type="text/javascript" charset="utf-8" src="res/full.json.js"></script>
+	<!--script type="text/javascript" charset="utf-8" src="res/full.json.js"></script-->
 	<script type="text/javascript" charset="utf-8" src="scripts/main.js"></script>
 
 </head>
