--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 	<meta charset="utf-8">
 
-	<link href="styles/campingsuedtirol.css" rel="stylesheet" type="text/css" />
-	<link href="styles/jquery.mobile.structure-1.3.2.min.css" rel="stylesheet" type="text/css" />
+	<!--link href="styles/campingsuedtirol.css" rel="stylesheet" type="text/css" />
+	<link href="styles/jquery.mobile.structure-1.3.2.min.css" rel="stylesheet" type="text/css" /-->
 
 	<script type="text/javascript" charset="utf-8" src="cordova.js"></script>
 	<script type="text/javascript" charset="utf-8" src="scripts/fileHelper.js"></script>
-	<script type="text/javascript" charset="utf-8" src="scripts/jquery.js"></script>
-	<script type="text/javascript" charset="utf-8" src="scripts/jquery.mobile-1.3.2.min.js"></script>
+	
+	<!--script type="text/javascript" charset="utf-8" src="scripts/jquery.mobile-1.3.2.min.js"></script>
 	<!--script type="text/javascript" charset="utf-8" src="res/full.json.js"></script-->
-	<script type="text/javascript" charset="utf-8" src="scripts/main.js"></script>
+	
 
 </head>
 <body>
@@ -22,7 +22,7 @@
 
 			<div id="status"></div>
 			<div id="status2"></div>
-			
-
+		<script type="text/javascript" charset="utf-8" src="scripts/jquery.js"></script>	
+		<script type="text/javascript" charset="utf-8" src="scripts/main.js"></script>
 </body>
 </html>
