--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		</header>
 		<div class="content">
             <div class="input-area ch30">
-                <input class="inputBox" id="fileNameInput" placeholder="File name"/>
+                <input class="inputBox" value="readme.txt" id="fileNameInput" placeholder="File name"/>
 			    <input class="inputBox" id="textInput" placeholder="Text"/>
             </div>
 			<div class="action-area ch30">
