--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<div class="content">
             <div class="input-area ch30">
                 <input class="inputBox" value="readme.txt" id="fileNameInput" placeholder="File name"/>
-			    <input class="inputBox" id="textInput" placeholder="Text"/>
+			    <input class="inputBox" value="test1" id="textInput" placeholder="Text"/>
             </div>
 			<div class="action-area ch30">
                 <button class="button" id="writeFileButton">Write</button>
