--- a/index.html
+++ b/index.html
@@ -1,37 +1,142 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>File Sample</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-		<meta charset="utf-8">
-		<link href="styles/main.css" rel="stylesheet" type="text/css" />
-		<script type="text/javascript" charset="utf-8" src="cordova.js"></script>
-		<script type="text/javascript" charset="utf-8" src="scripts/fileHelper.js"></script>
-		<script type="text/javascript" charset="utf-8" src="scripts/main.js"></script>
-	</head>
-	<body>
-		<header class="header">
-			<h1>File Sample</h1>
-		</header>
-		<div class="content">
-            <div class="input-area ch30">
-                <input class="inputBox" value="readme.txt" id="fileNameInput" placeholder="File name"/>
-			    <input class="inputBox" value="test1" id="textInput" placeholder="Text"/>
-            </div>
-			<div class="action-area ch30">
-                <button class="button" id="writeFileButton">Write</button>
-				<button class="button" id="readFileButton">Read</button>
-				<button class="button" id="deleteFileButton">Delete</button>
+<head>
+	<title>File Sample</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+	<meta charset="utf-8">
+
+	<link href="styles/campingsuedtirol.css" rel="stylesheet" type="text/css" />
+	<link href="styles/jquery.mobile.structure-1.3.2.min.css" rel="stylesheet" type="text/css" />
+
+	<script type="text/javascript" charset="utf-8" src="cordova.js"></script>
+	<script type="text/javascript" charset="utf-8" src="scripts/fileHelper.js"></script>
+	<script type="text/javascript" charset="utf-8" src="scripts/jquery.js"></script>
+	<script type="text/javascript" charset="utf-8" src="scripts/jquery.mobile-1.3.2.min.js"></script>
+	<script type="text/javascript" charset="utf-8" src="res/full.json.js"></script>
+	<script type="text/javascript" charset="utf-8" src="scripts/main.js"></script>
+
+</head>
+<body>
+
+	<!-- ////////////// Campingplaetze Liste /////////////////////////////////////////////////////////////////// -->
+
+	<div data-role="page" id="home" data-theme="b">
+		<div data-role="header">
+			<h2>Campingpl&auml;tze</h2>
+		</div>
+		<div data-role="content">
+			<ul data-role="listview" data-filter="true" id="campingplatzelist" data-theme="a">
+			</ul>
+		</div>
+		<footer data-role="footer" data-position="fixed" data-theme="b">
+			<nav data-role="navbar" data-iconpos="left">
+				<ul>
+					<li><a href="#home" data-icon="home">Home</a></li>
+					<li><a href="#services-page" data-icon="info">Service</a></li>
+				</ul>
+			</nav>
+		</footer>
+	</div>
+
+	<!-- ////////////// Details /////////////////////////////////////////////////////////////////// -->
+
+	<div data-role="page" id="campingplaetzedetails-page" data-theme="b">
+		<div data-role="header">
+			<h1>Details</h1>
+			<a href="#home" data-icon="home" class="ui-btn-right" rel="external" data-iconpos="notext" style="background: #848274;">Home</a>
+		</div>
+		<div data-role="content">
+			<h2></h2>
+			<div data-role="navbar">
+				<ul>
+					<li><a data-tab="info" class="ui-btn-active">Information</a></li>
+					<li><a data-tab="images">Impressionen</a></li>
+					<li><a data-tab="map">Anfahrt</a></li>
+				</ul>
 			</div>
-			<div class="result-area ch40">
-				<div class="results">
-                    <div id="result" class="desc"></div>
-                </div>
-                <div class="separator"></div>
+
+			<div class="tab-content">
+				<div id="info">
+					<div data-role="collapsible-set">
+						<div data-role="collapsible" data-mini="true" id="col-kontakt">
+							<h3>Kontakt</h3>
+							<p></p>
+						</div>
+						<div data-role="collapsible" data-mini="true" id="col-equipment">
+							<h3>Ausstattung</h3>
+							<p></p>
+						</div>
+						<div data-role="collapsible" data-mini="true" id="col-note">
+							<h3>Anmerkung</h3>
+							<p></p>
+						</div>
+						<div data-role="collapsible" data-mini="true" id="col-price">
+							<h3>Preise</h3>
+							<p>
+							</p>
+						</div>
+					</div>
+				</div>
+				<div id="images" style="display:none;">
+					<p>
+						
+					</p>
+				</div>
+				<div id="map" style="display:none;">
+					<p></p>
+				</div>
 			</div>
 		</div>
-		<footer class="footer">
-			<div>Cordova API Samples</div>
+		<footer data-role="footer" data-position="fixed" data-theme="b">
+			<nav data-role="navbar" data-iconpos="left">
+				<ul>
+					<li><a href="#home" data-icon="home">Home</a></li>
+					<li><a href="#services-page" data-icon="info">Service</a></li>
+				</ul>
+			</nav>
 		</footer>
-	</body>
+	</div>
+
+
+	<!-- ////////////// Services /////////////////////////////////////////////////////////////////// -->
+
+	<div data-role="page" id="services-page" data-theme="b">
+		<div data-role="header">
+			<h2>Service</h2>
+			<a href="#home" data-icon="back" class="ui-btn-right" rel="external" data-iconpos="notext" style="background: #848274;">Back</a>
+		</div>
+		<div data-role="content">
+			<div data-role="collapsible-set" data-inset="false">
+				<div data-role="collapsible" data-expanded-icon="info">
+					<h2>Impressum</h2>
+					<p>
+						<h3>VCS Vereinigung der Campingplatzbetreiber Südtirols</h3>
+						MwSt.Nr und Steuernr. / Cod. Fisc. + Part. IVA : 01701300210<br />
+						info@campingsuedtirol.com<br />
+						I-39100 Bozen/Bolzano<br />
+						Moritzinger Weg 83/Via S. Maurizio 83
+					</p>
+				</div>
+				<div data-role="collapsible" data-expanded-icon="info">
+					<h2>Partner</h2>
+					<p>
+						<ul data-role="listview">
+							<li data-mini="true"><a rel="external" href="http://www.derfreistaat.de/" target="_blank">www.derfreistaat.de</a></li>
+							<li data-mini="true"><a rel="external" href="http://www.glueck-freizeitmarkt.de/" target="_blank">www.glueck-freizeitmarkt.de</a></li>
+						</ul>
+					</p>
+				</div>
+			</div>
+		</div>
+		<footer data-role="footer" data-position="fixed" data-theme="b">
+			<nav data-role="navbar" data-iconpos="left">
+				<ul>
+					<li><a href="#home" data-icon="home">Home</a></li>
+					<li><a href="#services-page" class="ui-btn-active ui-state-persist" data-icon="info">Service</a></li>
+				</ul>
+			</nav>
+		</footer>
+	</div>
+
+</body>
 </html>
