--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<!-- ////////////// Campingplaetze Liste /////////////////////////////////////////////////////////////////// -->
 
 	<div id="status"></div>
-
+	<button class="button" id="readFileButton">Read</button>
 	
 	<script type="text/javascript" charset="utf-8" src="scripts/jquery.js"></script>
 	<script type="text/javascript" charset="utf-8" src="scripts/jquery.mobile-1.3.2.min.js"></script>
