--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 	<link href="styles/jquery.mobile.structure-1.3.2.min.css" rel="stylesheet" type="text/css" />
 
 	<script type="text/javascript" charset="utf-8" src="cordova.js"></script>
+	<script type="text/javascript" charset="utf-8" src="cordova.android.js"></script>
+	<script type="text/javascript" charset="utf-8" src="cordova.ios.js"></script>
 	
 
 </head>
@@ -21,7 +23,6 @@
 	
 	<script type="text/javascript" charset="utf-8" src="scripts/jquery.js"></script>
 	<script type="text/javascript" charset="utf-8" src="scripts/jquery.mobile-1.3.2.min.js"></script>
-	<!--script type="text/javascript" charset="utf-8" src="res/full.json.js"></script-->
 	<script type="text/javascript" charset="utf-8" src="scripts/fileHelper.js"></script>
 	<script type="text/javascript" charset="utf-8" src="scripts/main.js"></script>
 
