--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
 					</p>
 				</div>
 			</div>
+			<input id="update" type="button" value="Update" data-icon="refresh" />
 		</div>
 		<footer data-role="footer" data-position="fixed" data-theme="b">
 			<nav data-role="navbar" data-iconpos="left">
