--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
 	<link href="styles/campingsuedtirol.css" rel="stylesheet" type="text/css" />
 	<link href="styles/jquery.mobile.structure-1.3.2.min.css" rel="stylesheet" type="text/css" />
+	<link href="styles/main.css" rel="stylesheet" type="text/css" />
 
 	<script type="text/javascript" charset="utf-8" src="cordova.js"></script>
 	
@@ -21,7 +22,8 @@
 			<h2>Campingpl&auml;tze</h2>
 		</div>
 		<div data-role="content">
-			<ul data-role="listview" data-filter="true" id="campingplatzelist" data-theme="a">
+			<div class="header"><img src="img/logo.png"></div>
+			<ul data-role="listview" data-filter="true" id="campingplatzelist" data-theme="a" data-inset="true">
 			</ul>
 		</div>
 		<footer data-role="footer" data-position="fixed" data-theme="b">
