--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 					</p>
 				</div>
 			</div>
-			<input id="update" type="button" value="Update" data-icon="refresh" />
+			<input id="update" type="button" value="Update" data-icon="refresh" data-inset="false" />
 		</div>
 		<footer data-role="footer" data-position="fixed" data-theme="b">
 			<nav data-role="navbar" data-iconpos="left">
