--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 		</div>
 		<div data-role="content">
 			<div class="header"><img src="img/logo.png"></div>
+			<div class="header_text">Campingpl&auml;tze S&uuml;dtirol</div>
 			<ul data-role="listview" data-filter="true" id="campingplatzelist" data-theme="a" data-inset="true">
 			</ul>
 		</div>
