--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 			<a href="#home" data-icon="back" class="ui-btn-right" rel="external" data-iconpos="notext" style="background: #848274;">Back</a>
 		</div>
 		<div data-role="content">
-			<div data-role="collapsible-set" data-inset="false">
+			<div data-role="collapsible-set" >
 				<div data-role="collapsible" data-expanded-icon="info">
 					<h2>Impressum</h2>
 					<p>
@@ -128,7 +128,7 @@
 					</p>
 				</div>
 			</div>
-			<input id="update" type="button" value="Update" data-icon="refresh" data-inset="false" />
+			<input id="update" type="button" value="Update" data-icon="refresh" />
 		</div>
 		<footer data-role="footer" data-position="fixed" data-theme="b">
 			<nav data-role="navbar" data-iconpos="left">
