--- a/index.html
+++ b/index.html
@@ -127,8 +127,17 @@
 						</ul>
 					</p>
 				</div>
+				<div data-role="collapsible" data-expanded-icon="info">
+					<h2>Weitere Services</h2>
+					<p>
+						<ul data-role="listview">
+							<li data-mini="true"><a rel="external" href="http://www.provinz.bz.it/wetter/" target="_blank">Wetter</a></li>
+							<li data-mini="true"><a rel="external" href="http://www.provinz.bz.it/vmz/report/index_d.asp" target="_blank">Verkehr</a></li>
+						</ul>
+					</p>
+				</div>
 			</div>
-			<input id="update" type="button" value="Update" data-icon="refresh" />
+			<input id="update" type="button" value="Update" data-icon="refresh" style="width: 100%;text-align:left" />
 		</div>
 		<footer data-role="footer" data-position="fixed" data-theme="b">
 			<nav data-role="navbar" data-iconpos="left">
