--- a/index.html
+++ b/index.html
@@ -139,6 +139,30 @@
 				</div>
 			</div>
 			<input id="update" type="button" value="Update" data-icon="refresh" style="width: 100%;text-align:left" />
+
+			<div data-role="tabs" id="tabs">
+			  <div data-role="navbar">
+			    <ul>
+			      <li><a href="#one" data-ajax="false">one</a></li>
+			      <li><a href="#two" data-ajax="false">two</a></li>
+			      <li><a href="ajax-content.php" data-ajax="false">three</a></li>
+			    </ul>
+			  </div>
+			  <div id="one" class="ui-body-d ui-content">
+			    <h1>First tab contents</h1>
+			  </div>
+			  <div id="two">
+			    <ul data-role="listview" data-inset="true">
+			        <li><a href="#">Acura</a></li>
+			        <li><a href="#">Audi</a></li>
+			        <li><a href="#">BMW</a></li>
+			        <li><a href="#">Cadillac</a></li>
+			        <li><a href="#">Ferrari</a></li>
+			    </ul>
+			  </div>
+			</div>
+
+
 		</div>
 		<footer data-role="footer" data-position="fixed" data-theme="b">
 			<nav data-role="navbar" data-iconpos="left">
