--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 			<h2></h2>
 			<div data-role="navbar">
 				<ul>
-					<li><a data-tab="info" class="ui-btn-active">Information</a></li>
+					<li><a data-tab="info" class="ui-btn-active" id="info_tab">Information</a></li>
 					<li><a data-tab="images">Impressionen</a></li>
 					<li><a data-tab="map">Anfahrt</a></li>
 				</ul>
