--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<div data-role="content">
 			<div class="header"><img src="img/logo.png"></div>
 			<div class="header_text">Campingpl&auml;tze S&uuml;dtirol</div>
-			<ul data-role="listview" data-filter="true" id="campingplatzelist" data-theme="a" data-inset="true">
+			<ul data-role="listview" data-filter="true" id="campingplatzelist" data-theme="a" data-inset="true" data-filter-placeholder="Campingplätze">
 			</ul>
 		</div>
 		<footer data-role="footer" data-position="fixed" data-theme="b">
