--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 				<ul>
 					<li><a data-tab="info" class="ui-btn-active" id="info_tab">Information</a></li>
 					<li><a data-tab="images">Impressionen</a></li>
-					<li><a data-tab="map">Anfahrt</a></li>
+					<li id="anfahrt"></li>
 				</ul>
 			</div>
 
