--- a/index.html
+++ b/index.html
@@ -38,6 +38,28 @@
 	</div>
 
 
+	<!-- ////////////// Legende /////////////////////////////////////////////////////////////////// -->
+
+	<div data-role="page" id="legende-page" data-theme="b">
+		<div data-role="header">
+			<h1>Legende</h1>
+			<a href="#home" data-icon="home" class="ui-btn-right" rel="external" data-iconpos="notext" style="background: #848274;">Home</a>
+		</div>
+		<div data-role="content">
+			
+		</div>
+		<footer data-role="footer" data-position="fixed" data-theme="b">
+			<nav data-role="navbar" data-iconpos="left">
+				<ul>
+					<li><a href="#home" data-icon="home">Home</a></li>
+					<li><a href="#services-page" data-icon="info">Service</a></li>
+				</ul>
+			</nav>
+		</footer>
+	</div>
+
+
+
 	<!-- ////////////// Details /////////////////////////////////////////////////////////////////// -->
 
 	<div data-role="page" id="campingplaetzedetails-page" data-theme="b">
@@ -92,6 +114,7 @@
 					<h2>Weitere Services</h2>
 					<p>
 						<ul data-role="listview">
+							<li data-mini="true"><a rel="external" href="http://www.sentres.com/de/suedtirol" target="_blank">Sentres S&uuml;dtirol</a></li>
 							<li data-mini="true"><a rel="external" href="http://www.provinz.bz.it/wetter/" target="_blank">Wetter</a></li>
 							<li data-mini="true"><a rel="external" href="http://www.provinz.bz.it/vmz/report/index_d.asp" target="_blank">Verkehr</a></li>
 							<li data-mini="true"><a rel="external" href="http://www.youtube.com/watch?v=g5V3mJEE6bw" target="_blank">Film</a></li>
