--- a/index_en.html
+++ b/index_en.html
@@ -19,11 +19,11 @@
 
 	<div data-role="page" id="home" data-theme="b">
 		<div data-role="header">
-			<h2>Campingpl&auml;tze</h2>
+			<h2  id="lng_camping">Camping</h2>
 		</div>
 		<div data-role="content">
 			<div class="header"><img src="img/logo.png"></div>
-			<div class="header_text">Campingpl&auml;tze S&uuml;dtirol</div>
+			<div class="header_text">Camping South Tyrol</div>
 			<ul data-role="listview" data-filter="true" id="campingplatzelist" data-theme="a" data-inset="true" data-filter-placeholder="Campingplätze" data-autodividers="true">
 			</ul>
 		</div>
@@ -42,7 +42,7 @@
 
 	<div data-role="page" id="legende-page" data-theme="b">
 		<div data-role="header">
-			<h1>Legende</h1>
+			<h1>Legend</h1>
 			<a href="#home" data-icon="home" class="ui-btn-right" rel="external" data-iconpos="notext" style="background: #848274;">Home</a>
 		</div>
 		<div data-role="content">
@@ -102,7 +102,7 @@
 					</p>
 				</div>
 				<div data-role="collapsible" data-expanded-icon="info">
-					<h2>Partner</h2>
+					<h2 id="lng_partner"></h2>
 					<p>
 						<ul data-role="listview">
 							<li data-mini="true"><a rel="external" href="http://www.derfreistaat.de/" target="_blank">www.derfreistaat.de</a></li>
@@ -115,8 +115,8 @@
 					<p>
 						<ul data-role="listview">
 							<li data-mini="true"><a rel="external" href="http://www.sentres.com/de/suedtirol" target="_blank">Sentres S&uuml;dtirol</a></li>
-							<li data-mini="true"><a rel="external" href="http://www.provinz.bz.it/wetter/" target="_blank">Wetter</a></li>
-							<li data-mini="true"><a rel="external" href="http://www.provinz.bz.it/vmz/report/index_d.asp" target="_blank">Verkehr</a></li>
+							<li data-mini="true"><a rel="external" href="http://www.provinz.bz.it/wetter/" target="_blank">Weather</a></li>
+							<li data-mini="true"><a rel="external" href="http://www.provinz.bz.it/vmz/report/index_d.asp" target="_blank">Traffic</a></li>
 							<li data-mini="true"><a rel="external" href="http://www.youtube.com/watch?v=g5V3mJEE6bw" target="_blank">Film</a></li>
 						</ul>
 					</p>
