--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
 <script type="text/javascript">
 
-var Lang = 0;
+var Lang = 'de';
 
 language = navigator.language.split("-"); 
 language_root = (language[0]);
 
 if( language_root == "en" )
-    	Lang = 1;
+    	Lang = 'en';
     else if( language_root == "it" )
-    	Lang = 3;
+    	Lang = 'it';
 
 window.location = "index_"+Lang+".html";
 
