--- a/index_en.html
+++ b/index_en.html
@@ -92,7 +92,7 @@
 		<div data-role="content">
 			<div data-role="collapsible-set" >
 				<div data-role="collapsible" data-expanded-icon="info">
-					<h2>Impressum</h2>
+					<h2>Imprint</h2>
 					<p>
 						<h3>VCS Vereinigung der Campingplatzbetreiber Südtirols</h3>
 						MwSt.Nr und Steuernr. / Cod. Fisc. + Part. IVA : 01701300210<br />
@@ -102,7 +102,7 @@
 					</p>
 				</div>
 				<div data-role="collapsible" data-expanded-icon="info">
-					<h2 id="lng_partner"></h2>
+					<h2>Partner</h2>
 					<p>
 						<ul data-role="listview">
 							<li data-mini="true"><a rel="external" href="http://www.derfreistaat.de/" target="_blank">www.derfreistaat.de</a></li>
@@ -111,7 +111,7 @@
 					</p>
 				</div>
 				<div data-role="collapsible" data-expanded-icon="info">
-					<h2>Weitere Services</h2>
+					<h2>More Services</h2>
 					<p>
 						<ul data-role="listview">
 							<li data-mini="true"><a rel="external" href="http://www.sentres.com/de/suedtirol" target="_blank">Sentres S&uuml;dtirol</a></li>
