--- a/index_de.html
+++ b/index_de.html
@@ -102,7 +102,7 @@
 					</p>
 				</div>
 				<div data-role="collapsible" data-expanded-icon="info">
-					<h2 id="lng_partner"></h2>
+					<h2>Partner</h2>
 					<p>
 						<ul data-role="listview">
 							<li data-mini="true"><a rel="external" href="http://www.derfreistaat.de/" target="_blank">www.derfreistaat.de</a></li>
