--- a/index_it.html
+++ b/index_it.html
@@ -46,6 +46,74 @@
 			<a href="#home" data-icon="home" class="ui-btn-right" rel="external" data-iconpos="notext" style="background: #848274;">Home</a>
 		</div>
 		<div data-role="content">
+
+			<img src="img/eq/1.gif">Terreno erboso o terroso<br />
+			<img src="img/eq/2.gif">Poco ombreggiato dagli alberi Poco ombreggiato dagli alberi<br />
+			<img src="img/eq/3.gif">Ben ombreggiato dagli alberi Ben ombreggiato dagli alberi<br />
+			<img src="img/eq/4.gif">Presa elettrica per caravan con indicazione del voltaggio Presa elettrica per caravan con indicazione del voltaggio<br />
+			<img src="img/eq/5.gif">CapacitÃ  (caravan e tende) CapacitÃ  (caravan e tende)<br />
+			<img src="img/eq/6.gif">Docce Docce<br />
+			<img src="img/eq/7.gif">Bombole gas Bombole gas<br />
+			<img src="img/eq/8.gif">Scarico per WC chimico Scarico per WC chimico<br />
+			<img src="img/eq/9.gif">Asciugacapelli Asciugacapelli<br />
+			<img src="img/eq/10.gif">Campo giochi Campo giochi<br />
+			<img src="img/eq/11.gif">Servizi sanitari riscaldabili Servizi sanitari riscaldabili<br />
+			<img src="img/eq/12.gif">Presa corrente per rasoio Presa corrente per rasoio<br />
+			<img src="img/eq/13.gif">Lavello stoviglie Lavello stoviglie<br />
+			<img src="img/eq/14.gif">Lavatoio biancheria Lavatoio biancheria<br />
+			<img src="img/eq/15.gif">Posto illuminato a richiesta Posto illuminato a richiesta<br />
+			<img src="img/eq/16.gif">Vendita alimentari Vendita alimentari<br />
+			<img src="img/eq/17.gif">Bar Bar<br />
+			<img src="img/eq/18.gif">Ristorante Ristorante<br />
+			<img src="img/eq/19.gif">Lavatoi separati uomini/donne Lavatoi separati uomini/donne<br />
+			<img src="img/eq/20.gif">Distributore benzina vicino Distributore benzina vicino<br />
+			<img src="img/eq/21.gif">Centrifuga Centrifuga<br />
+			<img src="img/eq/22.gif">Pista di pattinaggio Pista di pattinaggio<br />
+			<img src="img/eq/23.gif">Stadio di pattinaggio artistico Stadio di pattinaggio artistico<br />
+			<img src="img/eq/24.gif">WC con acqua WC con acqua<br />
+			<img src="img/eq/25.gif">Acquaio per piedi Acquaio per piedi<br />
+			<img src="img/eq/26.gif">Deposito sci Deposito sci<br />
+			<img src="img/eq/27.gif">Spiaggia sul lago Spiaggia sul lago<br />
+			<img src="img/eq/28.gif">Senza barriere architettoniche Senza barriere architettoniche<br />
+			<img src="img/eq/29.gif">Sala per bambini/giovani Sala per bambini/giovani<br />
+			<img src="img/eq/30.gif">Biblioteca Biblioteca<br />
+			<img src="img/eq/31.gif">Skilift Skilift<br />
+			<img src="img/eq/32.gif">Pista di fondo Pista di fondo<br />
+			<img src="img/eq/33.gif">Bocce Bocce<br />
+			<img src="img/eq/34.gif">Sala fi tness Sala fi tness<br />
+			<img src="img/eq/35.gif">Bungalows o appartamenti Bungalows o appartamenti<br />
+			<img src="img/eq/36.gif">Piscina per bambini Piscina per bambini<br />
+			<img src="img/eq/37.gif">Affi to roulottes Affi to roulottes<br />
+			<img src="img/eq/38.gif">Minigolf Minigolf<br />
+			<img src="img/eq/39.gif">Discoteca Discoteca<br />
+			<img src="img/eq/40.gif">Pista dei birilli Pista dei birilli<br />
+			<img src="img/eq/41.gif">Ping pong Ping pong<br />
+			<img src="img/eq/42.gif">Tennis Tennis<br />
+			<img src="img/eq/43.gif">Equitazione Equitazione<br />
+			<img src="img/eq/44.gif">Sauna Sauna<br />
+			<img src="img/eq/45.gif">Bagno turco Bagno turco<br />
+			<img src="img/eq/46.gif">Sala TV Sala TV<br />
+			<img src="img/eq/47.gif">Solarium Solarium<br />
+			<img src="img/eq/48.gif">Whirlpool Whirlpool<br />
+			<img src="img/eq/49.gif">Lavatrice Lavatrice<br />
+			<img src="img/eq/50.gif">PossibilitÃ  di bagnarsi (per bambini) in acque aperte PossibilitÃ  di bagnarsi (per bambini) in acque aperte<br />
+			<img src="img/eq/51.gif">Piscina Piscina<br />
+			<img src="img/eq/52.gif">Piscina coperta Piscina coperta<br />
+			<img src="img/eq/53.gif">Noleggio barche a remi o di altro tipo Noleggio barche a remi o di altro tipo<br />
+			<img src="img/eq/54.gif">Altitudine Altitudine<br />
+			<img src="img/eq/55.gif">Area tot. Area tot.<br />
+			<img src="img/eq/56.gif">Cabine sanitarie in affi tto Cabine sanitarie in affi tto<br />
+			<img src="img/eq/57.gif">Stazione svuotamento serbatoi acque di scarico di roulottes Stazione svuotamento serbatoi acque di scarico di roulottes<br />
+			<img src="img/eq/58.gif">Stazione svuotamento serbatoi acque di scarico e fecali Stazione svuotamento serbatoi acque di scarico e fecali<br />
+			<img src="img/eq/59.gif">Allacciamenti gas Allacciamenti gas<br />
+			<img src="img/eq/60.gif">Sat Sat<br />
+			<img src="img/eq/61.gif">Allacciamenti acqua di scarico e acqua pulita Allacciamenti acqua di scarico e acqua pulita<br />
+			<img src="img/eq/62.gif">Snack bar o chiosco Snack bar o chiosco<br />
+			<img src="img/eq/63.gif">Gestione ecologica Gestione ecologica<br />
+			<img src="img/eq/64.gif">Internet Internet<br />
+			<img src="img/eq/65.gif">Fermata mezzi pubblici nelle immediate vicinanze Fermata mezzi pubblici nelle immediate vicinanze<br />
+			<img src="img/eq/66.gif">Cabine individuali Cabine individuali<br />
+			<img src="img/eq/67.gif">Campeggio con ottima valutazione ADAC Campeggio con ottima valutazione ADAC<br />
 			
 		</div>
 		<footer data-role="footer" data-position="fixed" data-theme="b">
