--- a/index_de.html
+++ b/index_de.html
@@ -189,6 +189,13 @@
 				</div>
 			</div>
 			<input id="update" type="button" value="Update" data-icon="refresh" style="width: 100%;text-align:left" />
+			<div data-role="navbar">
+			    <ul>
+			        <li><a href="javascript:localStorage.setItem( 'lang', 0 );">DE</a></li>
+			        <li><a href="javascript:localStorage.setItem( 'lang', 1 );">EN</a></li>
+			        <li><a href="javascript:localStorage.setItem( 'lang', 3 );">IT</a></li>
+			    </ul>
+			</div>
 		</div>
 
 		<footer data-role="footer" data-position="fixed" data-theme="b">
