--- a/index_it.html
+++ b/index_it.html
@@ -24,7 +24,7 @@
 		<div data-role="content">
 			<div class="header"><img src="img/logo.png"></div>
 			<div class="header_text">Campeggio Alto Adige</div>
-			<ul data-role="listview" data-filter="true" id="campingplatzelist" data-theme="a" data-inset="true" data-filter-placeholder="Campingplätze" data-autodividers="true">
+			<ul data-role="listview" data-filter="false" id="campingplatzelist" data-theme="a" data-inset="true" data-filter-placeholder="Campingplätze" data-autodividers="true">
 			</ul>
 		</div>
 		<footer data-role="footer" data-position="fixed" data-theme="b">
@@ -191,6 +191,13 @@
 				</div>
 			</div>
 			<input id="update" type="button" value="Update" data-icon="refresh" style="width: 100%;text-align:left" />
+			<div data-role="navbar">
+			    <ul>
+			        <li><a href="javascript:localStorage.setItem( 'lang', 0 );">DE</a></li>
+			        <li><a href="javascript:localStorage.setItem( 'lang', 1 );">EN</a></li>
+			        <li><a href="javascript:localStorage.setItem( 'lang', 3 );">IT</a></li>
+			    </ul>
+			</div>
 		</div>
 
 		<footer data-role="footer" data-position="fixed" data-theme="b">
