--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <script type="text/javascript">
 
 var Lang = 'de';
-var Lang_array = new Array( 'de', 'en', '', 'it' );
+var Lang_array = new Array( 'de', 'en', '', 'it', '', '', 'nl' );
 
 if( localStorage.getItem("lang") === null ) {
 
@@ -10,9 +10,11 @@ if( localStorage.getItem("lang") === null ) {
 	language_root = (language[0]);
 
 	if( language_root == "en" )
-	    	Lang = 'en';
-	    else if( language_root == "it" )
-	    	Lang = 'it';
+		Lang = 'en';
+	else if( language_root == "it" )
+		Lang = 'it';
+	else if( language_root == "nl" )
+		Lang = 'nl';
 
 	window.location = "index_"+Lang+".html";
 }
