--- a/index_nl.html
+++ b/index_nl.html
@@ -194,7 +194,7 @@
 					<li><a href="javascript:localStorage.setItem( 'lang', 0 );">DE</a></li>
 					<li><a href="javascript:localStorage.setItem( 'lang', 1 );">EN</a></li>
 					<li><a href="javascript:localStorage.setItem( 'lang', 3 );">IT</a></li>
-					<li><a href="javascript:localStorage.setItem( 'lang', 6 );">IT</a></li>
+					<li><a href="javascript:localStorage.setItem( 'lang', 6 );">NL</a></li>
 				</ul>
 			</div>
 		</div>
