--- a/index_de.html
+++ b/index_de.html
@@ -191,10 +191,10 @@
 			<input id="update" type="button" value="Update" data-icon="refresh" style="width: 100%;text-align:left" />
 			<div data-role="navbar">
 			    <ul>
-			        <li><a href="javascript:localStorage.setItem( 'lang', 0 );">DE</a></li>
-			        <li><a href="javascript:localStorage.setItem( 'lang', 1 );">EN</a></li>
-			        <li><a href="javascript:localStorage.setItem( 'lang', 3 );">IT</a></li>
-			        <li><a href="javascript:localStorage.setItem( 'lang', 6 );">NL</a></li>
+			        <li><a href="javascript:localStorage.setItem( 'lang', 0 );window.location='index.html';">DE</a></li>
+			        <li><a href="javascript:localStorage.setItem( 'lang', 1 );window.location='index.html';">EN</a></li>
+			        <li><a href="javascript:localStorage.setItem( 'lang', 3 );window.location='index.html';">IT</a></li>
+			        <li><a href="javascript:localStorage.setItem( 'lang', 6 );window.location='index.html';">NL</a></li>
 			    </ul>
 			</div>
 		</div>
