--- a/index_de.html
+++ b/index_de.html
@@ -197,6 +197,10 @@
 			        <li><a href="javascript:localStorage.setItem( 'lang', 6 );window.location='index.html';">NL</a></li>
 			    </ul>
 			</div>
+			<a href="#popupBasic" data-rel="popup" class="ui-btn ui-corner-all ui-shadow ui-btn-inline" data-transition="pop">Basic Popup</a>
+			<div data-role="popup" id="popupBasic">
+				<p>This is a completely basic popup, no options set.</p>
+			</div>
 		</div>
 
 		<footer data-role="footer" data-position="fixed" data-theme="b">
