--- a/index_de.html
+++ b/index_de.html
@@ -40,7 +40,7 @@
 
 	<!-- ////////////// Legende /////////////////////////////////////////////////////////////////// -->
 
-	<div data-role="page" id="legende-page" data-theme="b">
+	<!--div data-role="page" id="legende-page" data-theme="b">
 		<div data-role="header">
 			<h1>Legende</h1>
 			<a href="#home" data-icon="home" class="ui-btn-right" rel="external" data-iconpos="notext" style="background: #848274;">Home</a>
@@ -122,7 +122,7 @@
 				</ul>
 			</nav>
 		</footer>
-	</div>
+	</div-->
 
 
 
