--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
 <script type="text/javascript">
 
-location.href = "index_de.html";
+window.location.href = "index_de.html";
 
 </script>
