--- a/index.html
+++ b/index.html
@@ -1,4 +1,18 @@
-<script type="text/javascript" charset="utf-8" src="cordova.js"></script>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>File Sample</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+	<meta charset="utf-8">
+
+	<link href="styles/campingsuedtirol.css" rel="stylesheet" type="text/css" />
+	<link href="styles/jquery.mobile.structure-1.3.2.min.css" rel="stylesheet" type="text/css" />
+	<link href="styles/main.css" rel="stylesheet" type="text/css" />
+
+	<script type="text/javascript" charset="utf-8" src="cordova.js"></script>
+</head>
+<body>
+	
 <script type="text/javascript">
 
 var Lang = 'de';
@@ -25,3 +39,6 @@ else {
 }
 
 </script>
+
+</body>
+</html>
