--- a/index.html
+++ b/index.html
@@ -10,35 +10,10 @@
 	<link href="styles/main.css" rel="stylesheet" type="text/css" />
 
 	<script type="text/javascript" charset="utf-8" src="cordova.js"></script>
+	<meta http-equiv="refresh" content="5; URL=index_de.html"> 
 </head>
 <body>
-	
-<script type="text/javascript">
 
-var Lang = 'de';
-var Lang_array = new Array( 'de', 'en', '', 'it', '', '', 'nl' );
-
-if( !localStorage.lang ) {
-
-	language = navigator.language.split("-"); 
-	language_root = language[0];
-
-	if( language_root == "en" )
-		Lang = 'en';
-	else if( language_root == "it" )
-		Lang = 'it';
-	else if( language_root == "nl" )
-		Lang = 'nl';
-
-	alert("index_"+Lang+".html");
-
-	window.location.replace("index_"+Lang+".html");
-}
-else {
-	window.location = "index_"+Lang_array[localStorage.lang]+".html";
-}
-
-</script>
 
 </body>
 </html>
